Optmised for different screen sizes

--- a/contact/index.html
+++ b/contact/index.html
@@ -67,10 +67,8 @@
                 <div class="social-links-container">
                     <h3>Connect</h3>
                     <div class="social-links">
-                        <a href="https://linkedin.com/in/yourprofile" class="social-button" target="_blank">LinkedIn</a>
-                        <a href="https://scholar.google.com/citations?user=YOURID" class="social-button" target="_blank">Google Scholar</a>
-                        <a href="https://github.com/yourusername" class="social-button" target="_blank">GitHub</a>
-                        <a href="https://twitter.com/yourhandle" class="social-button" target="_blank">Twitter</a>
+                        <a href="https://linkedin.com/in/praharshtiw" class="social-button" target="_blank">LinkedIn</a>
+                        <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=rRYgoh8AAAAJ" class="social-button" target="_blank">Google Scholar</a>
                     </div>
                 </div>
 
