--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Praharsh Tiwari | Hypersonics & Experimental Aerodynamics</title>
+    <title>Praharsh Tiwari | Home</title>
     <meta name="description" content="Portfolio of Praharsh Tiwari, Ph.D. student at FCAAP/FSU specializing in experimental aerodynamics, active flow control, and high-speed regimes.">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
