Optmised for different screen sizes

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <section class="cv-section">
                 <div class="content-container">
                     <div class="cv-download">
-                        <p>For a complete overview of my qualifications, please download my CV:</p>
+                        <p>For a complete overview of my qualifications, please view/download my CV:</p>
                         <a href="docs/cv_praharsh_tiwari.pdf" class="cv-button" target="_blank">Download CV</a>
                     </div>
                 </div>
