--- a/contact/index.html
+++ b/contact/index.html
@@ -23,6 +23,13 @@
             <a href="../">
                 <img src="../images/new-logo.png" alt="Praharsh Tiwari" class="logo">
             </a>
+            
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+
             <nav>
                 <ul>
                     <li><a href="../">Home</a></li>
@@ -84,6 +91,7 @@
     <script>
         document.getElementById('year').textContent = new Date().getFullYear();
 
+        // SCROLL HEADER LOGIC
         window.addEventListener('scroll', function() {
             const header = document.querySelector('.header-container');
             if (window.scrollY > 50) {
@@ -92,6 +100,20 @@
                 header.classList.remove('scrolled');
             }
         });
+
+        // HAMBURGER MENU LOGIC
+        const hamburger = document.querySelector('.hamburger');
+        const navMenu = document.querySelector('nav');
+
+        hamburger.addEventListener('click', () => {
+            hamburger.classList.toggle('active');
+            navMenu.classList.toggle('active');
+        });
+
+        document.querySelectorAll('nav a').forEach(n => n.addEventListener('click', () => {
+            hamburger.classList.remove('active');
+            navMenu.classList.remove('active');
+        }));
     </script>
 </body>
 </html>
