--- a/research/index.html
+++ b/research/index.html
@@ -47,6 +47,7 @@
                     <span class="exp-role">Graduate Research Assistant</span>
                     <span class="exp-lab">Florida Center for Advanced Aero-Propulsion (FCAAP)</span>
                     <span class="exp-date">Aug 2025 – Present</span>
+                    <p><b>Advised by:</b> Dr. Rajan Kumar, Professor, Department of Mechanical and Aerospace Engineering, FAMU-FSU College of Engineering, Florida A&M - Florida State University, Tallahassee, FL, US</p>
                 </div>
 
                 <div class="exp-item">
