Final version of the website

--- a/research/index.html
+++ b/research/index.html
@@ -52,7 +52,7 @@
 
                 <div class="exp-item">
                     <span class="exp-role">Research Intern</span>
-                    <span class="exp-lab">Indian Institute of Technology Kanpur</span>
+                    <span class="exp-lab">Indian Institute of Technology Kanpur, Kanpur, UP, India</span>
                     <span class="exp-date">January 2025 - May 2025</span>
                     <div class="exp-desc">
                         <p><b>Behaviour of a partially shrouded compressible jet with modified ramp surface geometry.</b></p>
@@ -63,7 +63,7 @@
 
                 <div class="exp-item">
                     <span class="exp-role">SURGE Summer Research Intern</span>
-                    <span class="exp-lab">Indian Institute of Technology Kanpur</span>
+                    <span class="exp-lab">Indian Institute of Technology Kanpur, Kanpur, UP, India</span>
                     <span class="exp-date">May 2024 - July 2024</span>
                     <div class="exp-desc">
                         <p><b>Advised by:</b> Dr. Mohammed Ibrahim Sugarno, Associate Professor, Department of Aerospace Engineering, IIT Kanpur</p>
@@ -72,7 +72,7 @@
 
                 <div class="exp-item">
                     <span class="exp-role">Undergraduate Researcher</span>
-                    <span class="exp-lab">Shiv Nadar Institution of Eminence (deemed to be University), Delhi-NCR</span>
+                    <span class="exp-lab">Shiv Nadar Institution of Eminence (deemed to be University), Delhi-NCR, India</span>
                     <span class="exp-date">May 2022 – Jan 2025</span>
                     <div class="exp-desc">
                         <p><b>Motion of bodies through discrete and continuous interfaces.</b></p>
