--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         </div>
                         <div class="timeline-item">
                             <h3>Bachelor of Technology (B.Tech.) in Mechanical Engineering</h3>
-                            <p class="institution">Shiv Nadar University, Delhi-NCR, India</p>
+                            <p class="institution">Shiv Nadar Institution of Eminence (deemed to be University), Delhi-NCR, India</p>
                             <p class="duration">August 2021 - May 2025</p>
                         </div>
                     </div>
