Final version of the website

--- a/research/index.html
+++ b/research/index.html
@@ -57,7 +57,6 @@
                     <div class="exp-desc">
                         <p><b>Behaviour of a partially shrouded compressible jet with modified ramp surface geometry.</b></p>
                         <p><b>Advised by:</b> Dr. Mohammed Ibrahim Sugarno, Associate Professor, Department of Aerospace Engineering, IIT Kanpur</p>
-                        
                     </div>
                 </div>
 
@@ -77,7 +76,6 @@
                     <div class="exp-desc">
                         <p><b>Motion of bodies through discrete and continuous interfaces.</b></p>
                         <p><b>Advised by:</b> Dr. Visakh Vaikuntanathan, Assistant Professor, Department of Mechanical Engineering, SNIoE (DTU), Delhi-NCR</p>
-                        
                     </div>
                 </div>
             </div>
@@ -113,7 +111,11 @@
                     <li>
                         <span class="year">2026</span>
                         <div class="citation">
-                            M.A. Carvajal, <b>P. Tiwari</b>, R. Smith, B.A. Tuna, R. Kumar, W. Oates. "Aerodynamic physical reservoir computer training using oscillating vortex generators." <i>AIAA SciTech Forum 2026</i>, Orlando, FL.
+                            M.A. Carvajal, <b>P. Tiwari</b>, R. Smith, B.A. Tuna, R. Kumar, W. Oates. 
+                            <a href="https://arc.aiaa.org/doi/10.2514/6.2026-0901" target="_blank" style="text-decoration: underline; color: inherit; cursor: pointer;">
+                                "Aerodynamic physical reservoir computer training using oscillating vortex generators."
+                            </a> 
+                            <i>AIAA SciTech Forum 2026</i>, Orlando, FL.
                         </div>
                     </li>
                 </ul>
