Modified CV download button text

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="content-container">
                     <div class="cv-download">
                         <p>For a complete overview of my qualifications, please view/download my CV:</p>
-                        <a href="docs/cv_praharsh_tiwari.pdf" class="cv-button" target="_blank">Download CV</a>
+                        <a href="docs/cv_praharsh_tiwari.pdf" class="cv-button" target="_blank">View/Download CV</a>
                     </div>
                 </div>
             </section>
